<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Croatia Events</string>
    <string name="nav_header_title">CroatiaEvents</string>
    <string name="nav_header_info">info@varazdinevents.cf</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="pref_title_user_account">Account Settings</string>
    <string name="pref_summary_username">Change username</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_summary_password">Change password</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_summary_email">Change email</string>
    <string name="pref_title_email">Email</string>
    <string name="pref_summary_language">Change language</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_application_settings">Application settings</string>
    <string name="loginError">Incorrect e-mail or password</string>
    <string name="loginDatabaseError">No such entry in database</string>
    <string name="action_search">Search</string>
    <string name="category_party">Party</string>
    <string name="category_culture">Culture</string>
    <string name="application">Application</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="length">Length</string>
    <string name="date">Date</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="event_create_success">Successfuly created new event</string>
    <string name="event_create_failed">Error occured. Please try again later</string>
    <string name="organisers">Organizers</string>
    <string name="new_event_description">New Event</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="facebook">Facebook</string>
    <string name="image">Image</string>
    <string name="officialLink">Official link</string>
    <string name="host">Host</string>
    <string name="start_time">Start time</string>
    <string name="start_date">start_date</string>
    <string name="end_time">End Time</string>
    <string name="end_date">End Date</string>
    <string name="create_new_event">Create new event</string>
    <string name="facebook_app_id" translatable="false">772653122856607</string>

    <string name="event_details_general_title">Općenito o događaju</string>
    <string name="event_details_general_description">Detalji događaja</string>
    <string name="event_details_general_map">Lokacija događaja</string>
    <string name="pref_title_additional_settings">Additional Settings</string>
    <string name="pref_summary_notifications">Allow push notifications</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_summary_user_details">User Details</string>
    <string name="pref_title_user_details">User Details</string>
    <string name="defaultUsername" translatable="false">DefaultUsername</string>
    <string name="defaultPassword" translatable="false">DefaultPassword</string>
    <string name="defaultEmail" translatable="false">DefaultEmail</string>
    <string name="new_event_title">Kreiranje novog događaja</string>
    <string name="host_profile_general_description">Host Info</string>
    <string name="host_profile_general_title">Host Details</string>
    <string name="host_profile_general_map">Host Location</string>
    <string name="all_events_menu">All Events</string>
    <string name="menu_host">Host Info</string>
    <string name="event_general_title">Title: </string>
    <string name="event_general_date">Date: </string>
    <string name="event_general_time">Time: </string>
    <string name="event_general_host">Host: </string>
    <string name="event_general_facebook">Facebook: </string>
    <string name="event_general_category">Category: </string>
    <string name="signup">Sign Up</string>
    <string name="pref_title_password_repeat">Repeat password</string>
    <string name="defaultUserEmailPlaceholder" translatable="false">defaultUserEmailPlaceholder</string>
    <string name="defaultUsernamePlaceHolder" translatable="false">defaultUsernamePlaceholder</string>
    <string name="category_all">All Events</string>
    <string name="touch_to_set">Touch to set</string>
    <string name="network_not_accessible">Network unavailable</string>
    <string name="host_work_time">Work time: </string>
    <string name="host_address">Host address: </string>
    <string name="host_facebook">Facebook: </string>
    <string name="host_web">Web: </string>
    <string name="host_phone">Phone: </string>
    <string name="show_event">Show event</string>
    <string name="error_display">Error displaying something</string>
    <string name="about_app">About CroatiaEvents</string>
    <string name="about_app_text_1">
        \tOva inicijativa nastala je davnog 10. listopada 2014. godine osnivanjem Facebook stranice „Studentski život Varaždina“ gdje smo nastojali objediniti sva događanja
        s područja grada Varaždina te ih približiti studentskoj populaciji, ali i svima onima koji su bili zainteresirani sadržajem koji pružamo.
        Veliki početni uspjeh te mnogobrojne riječi pohvale ubrzo su ovu jednostavnu ideju pretvorile u ambiciju, koja nas kroz sve ove godine drži na istom putu ka
        ostvarenju konačnog cilja – <b>podizanju društvenog i kulturološkog standarda grada Varaždina.</b>
    </string>
    <string name="about_app_text_2">
        \tUnatoč brojnim preprekama, korak po korak uspjeli smo realizirati još jednu točku naše inicijative te izraditi web stranicu te Android i iOS aplikaciju, <b>VaraždinEvents</b>.
        Web stranica i aplikacije su zamišljene kao pregledniji supstitut sadržaja koji smo pružali putem Facebooka te je direktan posrednik između Vas i
        potencijalnih događaja i aktivnosti na području grada Varaždina i njegove okolice.
    </string>
    <string name="about_app_text_3">
        \tNadamo se da ćete se i VI uključiti u ovaj projekt jednostavnim sudjelovanjem u aktivnostima i događajima koji se svakodnevno provode.
        Ukoliko se imate želju neposredno uključiti u realizaciju ove inicijative, slobodno nam se javite sa svojim prijedlozima, primjedbama,
        ali i idejama za nove pothvate.
    </string>
    <string name="app_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="host_profile_title" translatable="false">defaultPlaceHolderHostProfileTitle</string>
    <string name="host_profile_events_list">Incoming events</string>
    <string name="show_web">Show Web profile</string>
    <string name="callHost">Do you want to make a call?</string>
    <string name="show_facebook">Show Facebook profile</string>
    <string name="welcome">Welcome</string>
    <string name="new_facebook_event">Import event</string>
    <string name="facebook_input_id">Enter event ID</string>

    <string name="callSupport">Call Support</string>
    <string name="allow_location_CAP">ALLOW LOCATION</string>
    <string name="allow_CAP">ALLOW</string>
    <string name="gimme_location">Please allow locations to automatically selecting a city. You can also set it manually.</string>
    <string name="manual_CAP">PICK MANUALY</string>
    <string name="pick_location">PICK CITY</string>

    <string-array name="Language">
        <item>English</item>
        <item>Croatian</item>
        <item>German</item>
    </string-array>

    <string-array name="LanguageValues">
        <item>"en"</item>
        <item>"hr"</item>
        <item>"de"</item>
    </string-array>

    <string-array name="UserDetails">//neki preference
        <item>Username</item>
        <item>Passowrd</item>
        <item>Email</item>
    </string-array>

    <string-array name="UserDetailsValues">
        <item>"userManager"</item>
        <item>"pass"</item>
        <item>"email"</item>
    </string-array>

    <string-array name="categories">
        <item>Theatre and movies</item>
        <item>Listen room</item>
        <item>Volunteering</item>
        <item>Gig</item>
        <item>Course</item>
        <item>Lecture</item>
        <item>Party</item>
        <item>Other</item>
    </string-array>
</resources>